[package]
name = "bgcss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
lightningcss = "1.0.0-alpha.35"
log = "0.4"
notify = "5.0"
ouroboros = "0.15.5"
anyhow = "1.0"
crossbeam-channel = "0.5"
objc2 = "=0.3.0-beta.3"
cocoa = { version = "0.24", default-features = false }

[dev-dependencies]
winit = "0.27.4" # For examples

[patch.crates-io]
lightningcss = { path = "../lightningcss/" }
