[package]
name = "bgcss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
log = "0.4"
crossbeam-channel = "0.5"
lightningcss = "1.0.0-alpha.35" # CSS Parsing
notify = "5.0" # File watching
ouroboros = "0.15.5" # Self referenced rules
objc2 = "=0.3.0-beta.3" # OSX theme color mechanism

[dev-dependencies]
winit = "0.27.4" # For examples

[patch.crates-io]
lightningcss = { path = "../lightningcss/" }
