[package]
name = "guicss"
version = "0.1.0"
edition = "2021"
authors = ["Paul Rouget <me@paulrouget.com>"]
description = "A CSS engine for Rust GUIs"
license = "MIT"
keywords = [ "CSS", "gui" ]
repository = "https://github.com/paulrouget/guicss"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0"
log = "0.4"
crossbeam-channel = "0.5"
lazy_static = "1.4"
regex = "1.6"
parking_lot = "0.12"
notify = "5.0"
ouroboros = "0.15.5"
lightningcss = { git = "https://github.com/paulrouget/lightningcss/", branch = "guicss" }

# Optionals
iced = { git = "https://github.com/iced-rs/iced", rev = "8221794", optional = true }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "8221794", optional = true }

[features]
default = []
toolkit-iced = ["dep:iced", "dep:iced_native"]

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "=0.3.0-beta.3" # OSX theme color mechanism
dispatch = "0.2"

[dev-dependencies]
# For basic example
winit = "0.27.4"
